[project]
name = "scanpy-tutorials"
dynamic = ["version"]
authors = [
    { name = "Alex Wolf" },
    { name = "Fidel Ramirez" },
    { name = "Sergei Rybakov" },
]
requires-python = ">=3.9"
dependencies = [
    "sphinx",
    "myst-nb",
    "scanpydoc[theme]>=0.13.4",
    "jupyterlab-vim>=4.1.4",
    "jupyterlab>=4.4.2",
    "ipython>=8.18.1",
    "notebook>=7.4.2",
    "jupyter-console>=6.6.3",
    "scanpy[dask,leiden]>=1.10.3",
    "anndata>=0.10.9",
    "pooch>=1.8.2",
    "scikit-image>=0.24.0",
    "igraph>=0.11.8",
    "dask[diagnostics,distributed]>=2024.7.1",
    "sklearn-ann>=0.1.2",
    "annoy>=1.17.3",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
bypass-selection = true  # This is not a package

[tool.hatch.envs.default]
python = "3.12"
installer = "uv"
[tool.hatch.envs.default.scripts]
build = "sphinx-build -M html . ./_build {args}"
clean = "git clean -fdX _build"

[tool.ruff]
extend-exclude = ["scanpy_workshop/"]
[tool.ruff.lint]
ignore = [
    "F821",  # R cells can sometimes define variables
    "E741",  # Fonts these days don’t display I and l in a confusable way
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]
